# memorize-scripture

./: '  .firebaserc  .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  SETUP.md  firebase.json  index.html  package 2.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
crates/text-condense/: Cargo.toml
crates/text-condense/src/: condenser.rs  condenser_options.rs  lib.rs
crates/text-diff/: Cargo.toml
cypress/: tsconfig.json
cypress/fixtures/: localStorageTexts.txt
cypress/integration/: Learn.test.ts  learn_spec.ts  sample_spec.js
public/: index.html  manifest.json  site.webmanifest
src/: App.module.scss  App.scss  App.test.tsx  App.tsx  Themes.module.scss  bibleBookInfo.ts  booksArray.ts  condenseText.test.ts  condenseText.ts  downloadScript.ts  index.tsx  serviceWorker.ts  setupTests.ts
src/Footer/: Footer.module.scss  Footer.tsx
src/__mocks__/: axios.ts
src/app/: Psalm23.ts  appSlice.ts  audioCommands.ts  audioContext.ts  audioContext.tsx  audioSlice.ts  condense.test.ts  condense.ts  firebaseContext.ts  init.ts  recordingContext.ts  recordingSlice.ts  searchSlice.ts  storage.ts  store.ts  textSlice.ts  types.ts
src/hooks/: useAudio.tsx  useAudioContext.tsx  useAudioRecorder.ts  useAudioRecorder.tsx  useAudioRecorder2.ts  useBibleAudio.tsx  useDetectOutsideClick.tsx  useFirebaseContext.tsx  useIsKeyboardUser.tsx  usePrevious.ts  useRecordedAudio.tsx  useRouteAnalytics.tsx  useStateIfMounted.tsx  useTheme.tsx
src/images/: og_image.psd
(+159 files in other folders)
